# clinical-agentic-rag

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  TODOS.md  pyproject.toml
backend/: 1-pdf_to_markdown.py  2-splitting.py  __init__.py  helper.py  main.py  rag.py  routes.py
backend/agent/: __init__.py  graph.py  runner.py  schemas.py  state.py
backend/api/: __init__.py  app.py  frontend.py  routes.py  schemas.py  ui.py
backend/content/: __init__.py  catalog.py  chunking.py  manifest.py  normalize.py  pdf_markdown.py
backend/core/: __init__.py  embeddings.py  models.py  runtime.py  settings.py  tracing.py
backend/rag/: __init__.py  citations.py  models.py  retrieval.py  sources.py  tools.py  vectorstore.py
backend/threads/: __init__.py  service.py  store.py
chroma_db/4088034b-047c-48f3-aefb-ebc3ce278091/: index_metadata.pickle
chroma_db/f73377ed-c0af-43e3-bfd2-bcdda119929d/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.tsx  api-context.tsx
frontend/src/components/: ConversationPane.tsx  EvidencePane.tsx  MessageComposer.tsx  RetrievalExplanationPanel.tsx  SourceDrawer.tsx  (+2 more)
scripts/: 1-pdf_to_markdown.py  2-splitting.py  3-embedding.py  4-chat.py  __init__.py  chunk_markdown.py  embed_docs.py  normalize_markdown.py  pdf_to_markdown.py  rebuild_index.py
tests/: test_agent_runner.py  test_api.py  test_chunking.py  test_embed_docs.py  test_embeddings.py  test_manifest_and_catalog.py  test_retrieval_pipeline.py  test_source_tools.py
(+10 files in other folders)
